Consolidate designs for mobile

--- a/components/createExercise.module.scss
+++ b/components/createExercise.module.scss
@@ -11,11 +11,11 @@
 
 .modalBox {
     z-index: 10;
+    margin: 0 50px;
     position: relative;
     background-color: white;
     top: 15%;
-    left: 35%;
-    width: 30%;
+    width: auto;
     height: auto;
     padding: 10px;
 }
