--- a/pages/intro.module.scss
+++ b/pages/intro.module.scss
@@ -9,6 +9,19 @@
     height: 100vh;
     overflow: auto;
 }
+.loadModal {
+    z-index: 6;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .videoScreen {
     width: 100%;
@@ -21,19 +34,113 @@
     left: 5%;
     width: 90%;
     padding: 10px;
+    background-color: white;
+    cursor: pointer;
+    &:hover {
+        background-color: whitesmoke;
+    }
+    border-radius: 5px;
 }
 
 .backButton {
     position: absolute;
     top: 10px;
     left: 10px;
+    padding: 10px;
+    background-color: white;
+    cursor: pointer;
+    &:hover {
+        background-color: whitesmoke;
+    }
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 .rulesScreen {
     margin: 5%;
     border: 2px solid black;
-    border-radius: 3px;
+    border-radius: 10px;
     padding: 20px;
     height: 50%;
     text-align: center;
+}
+
+// LOADER:
+.ldsSpinner {
+    color: official;
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.ldsSpinner div {
+    transform-origin: 40px 40px;
+    animation: ldsSpinner 1.2s linear infinite;
+}
+.ldsSpinner div:after {
+    content: ' ';
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 37px;
+    width: 8px;
+    height: 18px;
+    border-radius: 20%;
+    background: rgb(20, 19, 20);
+}
+.ldsSpinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+}
+.ldsSpinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+}
+.ldsSpinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+}
+.ldsSpinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+}
+.ldsSpinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+}
+.ldsSpinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+}
+.ldsSpinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+}
+.ldsSpinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+}
+.ldsSpinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+}
+.ldsSpinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+}
+.ldsSpinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+}
+.ldsSpinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+}
+@keyframes ldsSpinner {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
