--- a/pages/workout/workout.module.scss
+++ b/pages/workout/workout.module.scss
@@ -13,9 +13,10 @@
     z-index: 10;
     position: relative;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     top: 15%;
-    left: 35%;
-    width: 30%;
+    left: 20%;
+    width: 60%;
     height: 30vh;
     padding: 10px;
 }
@@ -48,6 +49,10 @@
     border-radius: 5px;
     padding: 10px;
     cursor: pointer;
+    &:hover {
+        background-color: whitesmoke;
+    }
+    border-radius: 5px;
 }
 
 .workoutTitle {
@@ -74,4 +79,8 @@
     border-radius: 5px;
     padding: 10px;
     cursor: pointer;
+    &:hover {
+        background-color: whitesmoke;
+    }
+    border-radius: 5px;
 }
