--- a/components/client/exercise.module.scss
+++ b/components/client/exercise.module.scss
@@ -51,3 +51,10 @@
     border: 1px solid black;
     padding: 5px;
 }
+
+.difficultyInput {
+    display: block;
+    width: 50%;
+    margin-bottom: 15px;
+    padding: 10px;
+}
