--- a/components/client/exercise.module.scss
+++ b/components/client/exercise.module.scss
@@ -8,7 +8,7 @@
 
 .exerciseBox {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    width: 500px;
+    width:350px;
     padding: 20px;
     h2 {
         text-align: center;
@@ -31,6 +31,7 @@
     border: 1px solid black;
     margin: 10px;
     padding: 10px;
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
 .setFlex {
@@ -41,20 +42,40 @@
 .setDesc {
     flex-grow: 1;
     border: 1px solid black;
+    width: auto;
     padding: 5px;
     margin-right: 5px;
+    border-radius: 25px;
+  border: 1px solid #a8a6be;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  font-family: fantasy;
 }
 
 .setWeight {
     flex-grow: 0;
-    font-weight: bold;
+    font-family: fantasy;
     border: 1px solid black;
-    padding: 5px;
+    padding: 3px;
+    border-radius: 25px;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
 .difficultyInput {
+    text-align: center;
     display: block;
     width: 50%;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 8em;
+    border-radius: 25px;
+  border: 1px solid #a8a6be;
     padding: 10px;
+    background-color : #ededed;
+    font-family : fantasy;
+    padding: 10px; text-align: center;
+    font-size: 1.2em;
+    text-decoration : none;
+    color : #2d2f31;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
