--- a/pages/workout/workout.module.scss
+++ b/pages/workout/workout.module.scss
@@ -28,6 +28,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .refWeightInput {
@@ -35,6 +36,28 @@
     display: block;
     text-align: center;
     margin-bottom: 15px;
+    box-shadow: inset #abacaf 0 0 0 2px;
+    border: 0;
+    background: rgba(0, 0, 0, 0);
+    appearance: none;
+    position: relative;
+    border-radius: 3px;
+    padding: 9px 12px;
+    line-height: 1.4;
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    font-weight: 400;
+    height: 40px;
+    transition: all .2s ease;
+    :hover{
+        box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 2px;
+    }
+    :focus{
+        background: #fff;
+        outline: 0;
+        box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 3px;
+    }
+
 }
 
 .startButton {
@@ -47,6 +70,26 @@
         background-color: whitesmoke;
     }
     border-radius: 5px;
+    
+                display: inline-block;
+                outline: 0;
+                border: none;
+                box-shadow: none;
+                cursor: pointer;
+                padding: 9px 22px;
+                font-size: 22px;
+                height: 50px;
+                font-weight: 400;
+                color: #fff;
+                text-align: center;
+                line-height: normal;
+                background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+                border-radius: 50px;
+                transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
+                :hover{
+                    box-shadow: 0 0 0 0.15rem #5ceace;
+                }
+                
 }
 
 .workoutTitle {
@@ -77,14 +120,32 @@
         background-color: whitesmoke;
     }
     border-radius: 5px;
+    display: inline-block;
+                outline: 0;
+                border: none;
+                box-shadow: none;
+                cursor: pointer;
+                padding: 9px 22px;
+                font-size: 22px;
+                height: 50px;
+                font-weight: 400;
+                color: #fff;
+                text-align: center;
+                line-height: normal;
+                background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+                border-radius: 50px;
+                transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
+                :hover{
+                    box-shadow: 0 0 0 0.15rem #5ceace;
+                }
 }
 
 .hpBarBox {
     position: relative;
     width: 30%;
     height: 30px;
-    border: 2px solid red;
     margin: 20px auto;
+    
     p {
         position: absolute;
         width: 100%;
@@ -103,4 +164,19 @@
     left: 0;
     top: 0;
     background-color: red;
+    
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    padding: 14px 24px;
+    border: none;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+    background: linear-gradient(to right, rgb(250, 38, 38) 0%, rgb(247, 37, 37) 50%, rgb(215, 4, 102) 100%);
+    color: #fff;
+    font-family: fantasy;
+
 }
