--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -3,6 +3,10 @@
     height: 80px;
     display: flex;
     flex-direction: column;
+    font-family: 'Heron Sans', sans-serif;
+    font-weight: bold;
+    color: antiquewhite;
+    background-color: rgb(0, 0, 0);
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid black;
