--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -6,24 +6,38 @@
     border: 0;
     color: #fff;
     font-size: 17.5px;
+    font-family: 'Heron Sans', sans-serif;
     border: 2px solid transparent;
     border-color: #000;
     color: #000;
-    background: transparent;
+    background-image: url('https://www.mensjournal.com/wp-content/uploads/mf/_main_muscle_1.jpg?w=900&h=506&crop=1&quality=86&strip=all');
+    background-repeat: no-repeat;
+    background-size: cover;
     font-weight: 800;
     line-height: 30px;
     transition: background, color 0.1s ease-in-out;
-    :hover {
-        background-color: rgb(255, 251, 251);
-        color: rgb(12, 11, 11);
-    }
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: absolute;
+  top: 80px;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  height: 100vh;
 }
 
 .card {
   margin-bottom: 20px;
-  min-width: 20%;
+  position: centre;
+  transform: perspective(400px) rotateX(5deg);
+  width: 60%;
+  max-width: 500px;
+  background-color: #17223b;
+  color: antiquewhite;
+  border: none;
+  border-radius: 8px;
+  padding: 12px 24px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
