--- a/pages/workout/workout.module.scss
+++ b/pages/workout/workout.module.scss
@@ -12,14 +12,24 @@
 .modalBox {
     z-index: 10;
     position: relative;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: #fafafa;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
     top: 15%;
-    left: 20%;
-    width: 60%;
-    height: 30vh;
-    padding: 10px;
-}
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    height: 40vh;
+    padding: 20px;
+    font-family: 'Heron Sans', sans-serif;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
 .modalForm {
     height: 100%;
@@ -32,7 +42,7 @@
 }
 
 .refWeightInput {
-    width: 50%;
+    width: 95%;
     display: block;
     text-align: center;
     margin-bottom: 15px;
@@ -45,7 +55,7 @@
     padding: 9px 12px;
     line-height: 1.4;
     color: rgb(0, 0, 0);
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
     height: 40px;
     transition: all .2s ease;
@@ -80,15 +90,11 @@
                 font-size: 22px;
                 height: 50px;
                 font-weight: 400;
-                color: #fff;
+                color: antiquewhite;
                 text-align: center;
                 line-height: normal;
-                background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+                background: #17223b;
                 border-radius: 50px;
-                transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
-                :hover{
-                    box-shadow: 0 0 0 0.15rem #5ceace;
-                }
                 
 }
 
@@ -116,9 +122,6 @@
     border-radius: 5px;
     padding: 10px;
     cursor: pointer;
-    &:hover {
-        background-color: whitesmoke;
-    }
     border-radius: 5px;
     display: inline-block;
                 outline: 0;
@@ -129,20 +132,16 @@
                 font-size: 22px;
                 height: 50px;
                 font-weight: 400;
-                color: #fff;
+                color: antiquewhite;
                 text-align: center;
                 line-height: normal;
-                background: linear-gradient(90deg,#5522fa 0,#0074e4 100%);
+                background: #17223b;
                 border-radius: 50px;
-                transition: color .2s ease,background-color .2s ease,box-shadow .2s ease;
-                :hover{
-                    box-shadow: 0 0 0 0.15rem #5ceace;
-                }
 }
 
 .hpBarBox {
     position: relative;
-    width: 30%;
+    width: 90%;
     height: 30px;
     margin: 20px auto;
     
