--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -10,7 +10,8 @@
     border: 2px solid transparent;
     border-color: #000;
     color: #000;
-    background-image: url('https://www.mensjournal.com/wp-content/uploads/mf/_main_muscle_1.jpg?w=900&h=506&crop=1&quality=86&strip=all');
+    background-image: url('https://serving.photos.photobox.com/88546312ef59683eeb5c5e30247b2232ad2c112eef74b5c0ada7628c8e44864639231d2e.jpg');
+    background-size: cover;
     background-repeat: no-repeat;
     background-size: cover;
     font-weight: 800;
